# site-planning-ecole

./: package-lock.json
backend/: .env  package.json  server.js
backend/models/: eleve.model.js  rdv.model.js  roller.model.js
backend/routes/: eleves.js  exercises.js  rdvs.js  roller.js  users.js
cppweb/: .gitignore  CMakeLists.txt  cppweb.conf
cppweb/page/: layout.html  page.html
cppweb/page/admin/sondages/: page.html
cppweb/page/admin/sondages/piscine/: page.html
cppweb/page/admin/sondages/rdvs/: page.html
cppweb/page/admin/sondages/rollers/: page.html
cppweb/page/sondage/piscine/: page.html
cppweb/page/sondage/rdvs/: page.html
cppweb/page/sondage/rollers/: page.html
cppweb/private/: piscine.db  rdvs.db  rollers.db  sondages.db
cppweb/public/: auth_modal.js  styles.css  test.js
cppweb/src/: _html_components_impl.cpp
cppweb/src/api/: check_admin.cpp  init.cpp  is_authentified.hpp  piscine.cpp  rdvs.cpp  rollers.cpp  sondages.cpp
cppweb/src/components/: auth_redirect.cpp  heading.cpp  icon.cpp  input.cpp  modal.cpp  navbar.cpp
cppweb/src/db/: db.cpp  db.hpp
frontend/: package-lock.json  package.json
frontend/public/: index.html  test.html
frontend/src/: App.js
frontend/src/components/: calendar.css  create-exercise.component.js  create-user.component.js  edit-exercise.component.js  exercise-list.component.js  navbar.component.js  rdv-list-user.component.js  reservation.component.js  week-calendar.component.js
frontend/src/pages/: roller.page.js
nextjs/site-maman/: .env  package-lock.json  package.json
(+78 files in other folders)
